--- a/Insight/app/build.gradle
+++ b/Insight/app/build.gradle
@@ -26,4 +26,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+    implementation 'com.nbsp:library:1.8'
+    implementation 'com.android.support:design:27.1.1'
 }
